--- a/produtos.css
+++ b/produtos.css
@@ -1,33 +1,37 @@
-header{
-    background-color: #ccc;
-    padding: 20px 0;
+header {
+	background: #BBBBBB;
+	padding: 20px 0;
 }
 
 .caixa{
-    width: 940px;
-    position: relative;
-     margin: 0 auto;
+	width: 940px;
+	position: relative;
+	margin: 0 auto;
 }
+
 nav{
-    position: absolute;
-    top: 110px;
-    right: 0px;
+	position: absolute;
+	top: 110px;
+	right: 0;
 }
 
-
-
-
-
-nav li{
-    display: inline-block;
-    margin: 0 0 0 15px;
+nav li {
+	display: inline;
+	margin: 0 0 0 15px;
 }
 
-
-nav a{
-    text-transform: uppercase;
-    color: black;
-    font-size: larger;
-    font-weight: bold;
-    text-decoration: none;
+nav a {
+	text-transform: uppercase;
+	color: #000000;
+	font-weight: bold;
+	font-size: 22px;
+	text-decoration: none;
+}
+.produtos{
+	width: 940px;
+	margin: 0 auto;
+}
+.produtos li{
+	display: inline-block;
+	text-align: center;
 }
