--- a/produtos.css
+++ b/produtos.css
@@ -1,5 +1,5 @@
 header {
-	background: #BBBBBB;
+	background: #ccc;
 	padding: 20px 0;
 }
 
@@ -27,11 +27,39 @@ nav a {
 	font-size: 22px;
 	text-decoration: none;
 }
+
+nav a:hover{
+	color: rgb(0, 255, 149);
+	text-decoration: underline;
+}
 .produtos{
 	width: 940px;
 	margin: 0 auto;
+		
 }
 .produtos li{
 	display: inline-block;
 	text-align: center;
+	width: 30%;
+	vertical-align: top;
+	margin: 50px 0;
+	margin: 0 1.5%;
+	padding: 30px 20px;
+	box-sizing: border-box;
+	border: 2px solid black;
+	border-radius: 10px;
+}
+
+.produtos h2{
+	font-size: 30px;
+	font-weight: bold;
+}
+
+ .produtos li:hover{
+	border-color: blue;
+}
+.produtos-preco{
+	font-size: 22px;
+	font-weight: bold;
+	margin: 10px;
 }
