--- a/produtos.css
+++ b/produtos.css
@@ -29,13 +29,14 @@ nav a {
 }
 
 nav a:hover{
-	color: rgb(0, 255, 149);
+	color: #c78c19;
 	text-decoration: underline;
 }
+
 .produtos{
 	width: 940px;
 	margin: 0 auto;
-		
+	/*padding: 50px;*/	
 }
 .produtos li{
 	display: inline-block;
@@ -55,9 +56,16 @@ nav a:hover{
 	font-weight: bold;
 }
 
- .produtos li:hover{
-	border-color: blue;
+.produtos li:hover{
+	border-color: #c78c19;
+	
 }
+
+.produtos li:active{
+	border-color: #088c19;
+}
+
+
 .produtos-preco{
 	font-size: 22px;
 	font-weight: bold;
