--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header {
-	background: #f700ff;
+	background: #e95fee;
 	padding: 20px 0;
 }
 
@@ -29,7 +29,7 @@ nav a {
 }
 
 nav a:hover{
-	color: #c78c19;
+	color: #ff006a;
 	text-decoration: underline;
 }
 
@@ -47,7 +47,7 @@ nav a:hover{
 	margin: 0 1.5%;
 	padding: 30px 20px;
 	box-sizing: border-box;
-	border: 2px solid rgb(0, 0, 0);
+	border: 2px solid rgb(129, 98, 241);
 	border-radius: 10px;
 }
 
@@ -115,11 +115,11 @@ form{
 form label{
 	display: block;
 	font-size: 19px;
-	margin: 8px;
+	margin: 5px;
 }
 form input{
 	display: block;
 	margin: 0 0 20px 0;
-	padding: 8px 15px;
-	width: 50%;
+	padding: 6px 5px;
+	width: 40%;
 }
