--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header {
-	background: #e95fee;
+	background: #ccc;
 	padding: 20px 0;
 }
 
@@ -29,7 +29,7 @@ nav a {
 }
 
 nav a:hover{
-	color: #ff006a;
+	color: #c78c19;
 	text-decoration: underline;
 }
 
@@ -47,7 +47,7 @@ nav a:hover{
 	margin: 0 1.5%;
 	padding: 30px 20px;
 	box-sizing: border-box;
-	border: 2px solid rgb(129, 98, 241);
+	border: 2px solid black;
 	border-radius: 10px;
 }
 
@@ -98,28 +98,95 @@ form{
 }
 
 input{
-	border: 2px solid rgb(0, 208, 255);
+	
 	border-radius: 5px;
 
 }
 
 
 
-input:hover{
-	border: 2px solid blueviolet;
-}
-form{
-	margin: 40px 0;
-}
-
 form label{
 	display: block;
-	font-size: 19px;
-	margin: 5px;
+	font-size: 20px;
+	margin: 0 0 10px 0;
+	
 }
-form input{
+
+form .input-padrao{
 	display: block;
 	margin: 0 0 20px 0;
-	padding: 6px 5px;
+	padding: 10px 25px;
+	width: 50%;
+}
+
+textarea{
+	margin:0 0 20px 0;
+}
+
+.checkbox{
+	margin: 20px 0;
+}
+
+.enviar{
 	width: 40%;
+	padding: 15px 0;
+	background-color:orange ;
+	color: aquamarine;
+	font-size: 18px;
+	font-weight: bold;
+	transition: 0.5s all;
+}
+
+.enviar:hover{
+	background-color: black;
+	color: white;
+	transform: scale(1.05);
+}
+
+table{
+	margin: 20px 0 40px;
+}
+
+thead{
+	background: #555;
+	color: white;
+	font-weight: bold;
+}
+
+td{
+	border: 2px solid #000;
+	padding: 15px 66px;
+}
+
+/*CSS da página principal*/
+.banner{
+	width: 100%;
+}
+
+.titulo-centralizado{
+	text-align: center;
+	font-size: 2em;
+	margin: 1em 0 1em;
+}
+
+.principal p{
+	margin: 0 0 1em;
+}
+
+.principal strong{
+	font-weight: bold;
+}
+
+.principal em{
+	font-style: italic;
+}
+
+.imagembeneficios{
+	width: 60%;
+}
+
+.utensilios{
+	width: 150px;
+	float: left;
+	margin: 0 30px 0;
 }
