--- a/style.css
+++ b/style.css
@@ -164,16 +164,20 @@ td{
 }
 
 .titulo-centralizado{
+	
 	text-align: center;
-	font-size: 2em;
+	font-size: 2.5em;
 	margin: 1em 0 1em;
-	font-family: 'Righteous', sans-serif;
-
+	font-family: 'Bebas Neue', sans-serif;
 
 }
 
 .principal p{
 	margin: 0 0 1em;
+	font-family: 'Roboto', sans-serif;
+	font-size: 1em;
+	text-align: justify;
+	
 }
 
 .principal strong{
@@ -191,5 +195,15 @@ td{
 .utensilios{
 	width: 150px;
 	float: left;
-	margin: 0 30px 0;
+	margin: 0 20px 20px 0;
 }
+
+.mapa{
+	padding: 3em 0;
+}
+
+.mapa p{
+	margin: 0 0 2em;
+	text-align: center;
+}
+
